started server functions

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,2 +1,9 @@
-all:
-	clang server.c -g -o server
+CC = clang
+CFLAGS = -g
+all: server
+
+clean:
+	rm -f server
+
+client: client.c ui.c ui.h
+	$(CC) $(CFLAGS) -o server server.c -pthread
